--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,34 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body {
+    background-color: bisque;
+    padding: 80px;
+    color:rgb(44, 14, 55)
+}
+
+.container {
+    background-color: rgb(219, 188, 227);
+}
+
+.liColor{
+    background-color: rgba(255, 255, 255, 0.62);
+    transition: 0.3s;
+}
+
+.liColor:hover{
+    background-color: rgba(255, 255, 255, 0.817);
+}
+
+.closeButton{
+    box-sizing: border-box;
+    background-color: rgba(240, 248, 255, 0);
+    transition: 0.3s;
+    border: 0px, solid, pink;
+}
+
+.closeButton:hover{
+    box-sizing: border-box;
+    background-color: rgb(255, 255, 255);
+    border: 1px, solid, pink;
+}
